--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ before_install:
   - docker build -t joekylau/docker-react -f Dockerfile.dev .
 
 script:
-  - docker run joekylau/docker-react CI=true npm run test
+  - docker run joekylau/docker-react npm run test
